tests/modules/errors/missing_export.nfu
import nonExistent from "../simple_export"
nonExistent
